--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,5 +34,5 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.0"
-    implementation 'video.pano:rtc-exoplayer:1.4.4.6'
+    implementation 'video.pano:rtc:1.5.3.1'
 }
