--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -36,12 +36,31 @@ target 'Runner' do
   target 'Runner-Screen' do
     platform :ios, '11.0'
     use_frameworks!
-    pod 'PanoRtc_iOS/ReplayKitExt', '1.4.4.6'
+    pod 'PanoRtc_iOS/ReplayKitExt', '1.5.3'
   end
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+      # You can enable the permissions needed here. For example to enable camera
+      # permission, just remove the `#` character in front so it looks like this:
+      #
+      # ## dart: PermissionGroup.camera
+      # 'PERMISSION_CAMERA=1'
+      #
+      #  Preprocessor definitions can be found in: https://github.com/Baseflow/flutter-permission-handler/blob/master/permission_handler/ios/Classes/PermissionHandlerEnums.h
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+
+        # dart: PermissionGroup.camera
+        'PERMISSION_CAMERA=1',
+
+        # dart: PermissionGroup.microphone
+        'PERMISSION_MICROPHONE=1',
+      ]
+
+    end
   end
 end
