--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,7 +6,7 @@ description: Demonstrates how to use the pano_rtc plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -26,7 +26,7 @@ dependencies:
 
   permission_handler: ^8.1.0
   path_provider: ^2.0.2
-  stepper_counter_swipe: ^1.0.0
+  count_stepper: ^0.0.4
   flutter_easyloading: ^3.0.0
 
 dev_dependencies:
